# chatbot-faq

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test.py  test_pipeline.py  test_vectorstore.py
data/: personal.json
src/: config.py
src/embeddings/: embedder.py
src/llm/: gemini_client.py
src/loaders/: pdf_loader.py  text_loader.py
src/rag/: pipeline.py
src/utils/: chunking.py  text_cleaning.py
src/vectorstore/: faiss_store.py
